fix inspire-validator image